added frontend files

--- a/Frontend/src/assets/index.css
+++ b/Frontend/src/assets/index.css
@@ -1,4 +1,4 @@
-
+/* 
 
 * {
   /* margin: 0;
@@ -78,4 +78,4 @@ p {
           boxShadow: 0 8px 32px 0 rgba(51, 183, 134, 0.5);
           backdropFilter: blur(8.5px);
           WebkitBackdropFilter: blur(8.5px); 
-}
+} */
