--- a/Frontend/src/components/Popup.scss
+++ b/Frontend/src/components/Popup.scss
@@ -1,14 +1,11 @@
 .popup{
     position: fixed;
-    top : 0;
+    top:0;
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: (0,0,0,0.2);
-    box-shadow: 0 8px 32px 0 rgba(51, 183, 134, 0.5);
-     backdrop-filter: blur(2.5px);
-    -webkit-backdrop-filter: blur(8.5px);
-    
+    background-color: rgba(0,0,0,0.2);
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,16 +15,12 @@
     position: relative;
     padding: 32px;
     width: 100%;
-    border: black 2px solid;
-    border-radius: 12px;
     max-width: 640px;
-    background-color: #ffff;
+    background-color: #fff;
 }
 
-.popup-inner .close-btn {
+.popup-inner.close-btn {
     position: absolute;
     top: 16px;
-    right: 16px;
-    height: 10%;
-    width: 5%;
+    right:16px;
 }
