--- a/Frontend/src/pages/GovermentDashboard/governementDashboard.scss
+++ b/Frontend/src/pages/GovermentDashboard/governementDashboard.scss
@@ -6,16 +6,27 @@ body {
     
     .portalContainer {
         width: 100%;
-        height: 100%;
+        height: 70%;
     
         .governNavbar {
+            height: fit-content;
             width: 100%;
             display: flex;
             align-items: center;
             justify-content: space-between;
+            margin-top: 15px;
     
             .logoImage1 {
-                margin-left: 60px;
+                width: 150px;
+                height: 100px;
+                border-radius: 50%;
+                margin-left: 40px;
+                margin-top: -   50px;
+                cursor: pointer;
+    
+                &:hover {
+                    opacity: 0.9;
+                } 
             }
     
             .navItems {
@@ -51,11 +62,11 @@ body {
     
         .searchbar {
             width: 100%;
-            height: 100%;
+            height: auto    ;
             display: flex;
             align-items: center;
             justify-content: space-between;
-            margin-top: 30px;
+            margin-top: -45px;
             background-color: #fda103;
     
             .search {
@@ -125,6 +136,10 @@ body {
                 align-items: center;
                 justify-content: space-evenly;
                 margin-top: 20px;
+
+                .graphImages {
+                    margin-right: 30px;
+                }
     
                 .myGovernment {
                     width: 25%;
