--- a/Frontend/src/pages/Merchant_Dashboard/Merchant_Dashboard.scss
+++ b/Frontend/src/pages/Merchant_Dashboard/Merchant_Dashboard.scss
@@ -5,8 +5,9 @@
     justify-content: space-between;
 
     .merchantCenter {
-        width: 40%;
+        width:40%;
         height: 100%;
+        margin-right: 100px;
 
         .centerHeading {
             width: 100%;
@@ -19,7 +20,7 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                justify-content: start;
+                justify-content: right;
             }
 
             .heading2 {
@@ -178,63 +179,41 @@
                 }
             }
         }
+
+        .boxstyle {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            // margin-left: -800px;
+            margin-top: 30px;
+            // width: 100%;
+        }
+
+        .graphImages {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            margin-top: 30px;
+
+            .gImage {
+                width: 100%;
+                height: 350px;
+            }
+        }
+    }
+
+    .scanqr {
+        margin-top: 20px;
+        display: flex;
+        justify-content: left;
     }
 }
 
 
 
-/* Popup container */
-.popup {
-    position: relative;
-    display: inline-block;
-    cursor: pointer;
-  }
-  
-  /* The actual popup (appears on top) */
-  .popup .popuptext {
-    visibility: hidden;
-    width: 160px;
-    background-color: #555;
-    color: #fff;
-    text-align: center;
-    border-radius: 6px;
-    padding: 8px 0;
-    position: absolute;
-    z-index: 1;
-    bottom: 125%;
-    left: 50%;
-    margin-left: -80px;
-  }
-  
-  /* Popup arrow */
-  .popup .popuptext::after {
-    content: "";
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: #555 transparent transparent transparent;
-  }
-  
-  /* Toggle this class when clicking on the popup container (hide and show the popup) */
-  .popup .show {
-    visibility: visible;
-    -webkit-animation: fadeIn 1s;
-    animation: fadeIn 1s
-  }
-  
-  /* Add animation (fade in the popup) */
-  @-webkit-keyframes fadeIn {
-    from {opacity: 0;}
-    to {opacity: 1;}
-  }
-  
-  @keyframes fadeIn {
-    from {opacity: 0;}
-    to {opacity:1 ;}
-  }
 
   .inputBox{
     margin-bottom: 15px;
@@ -252,13 +231,13 @@
             }
         }
 
-.boxstyle{
-    fontSize: 18px;
-     color: #573b87;
-      textAlign: center;
-       cursor: pointer ;
-       marginBottom:-250px;
-       marginLeft:-1200px;
-       height:100px;
-        width:150px;
-}
+// .boxstyle{
+//     fontSize: 18px;
+//      color: #573b87;
+//       textAlign: center;
+//        cursor: pointer ;
+//        marginBottom:-250px;
+//        marginLeft:-1200px;
+//        height:100px;
+//         width:150px;
+// }
